# tla-sany-lsp

./: .envrc  LICENSE  README.md  pyproject.toml
demo/: .gitignore  lib.tla  main.tla
tla_sany_lsp/: parser.py  server.py
